[package]
name = "anoncred-signatures"
version = "0.1.0"
authors = ["Michael Lodder <redmike7@gmail.com>"]
edition = "2018"

[dependencies]
amcl = { version = "0.2.0", features = ["bls381", "bn254"] }
digest = "0.8.0"
sha2 = "0.8.0"
rand = "0.6.5"
num-traits = "0.2.6"
lazy_static = "1.3.0"
serde = { version = "1.0.90", features = ["derive"] }
zeroize = "0.6.0"
